--- a/E-Commerce Animated Order Button/order.css
+++ b/E-Commerce Animated Order Button/order.css
@@ -1,3 +1,12 @@
+body{
+	margin: 0;
+	display: flex;
+	min-height: 100vh;
+	align-items: center;
+	text-align: center;
+	justify-content: center;
+}
+
 .order {
 	appearance: none;
 	border: 0;
